--- a/entities/binary_sensors/motion.yaml
+++ b/entities/binary_sensors/motion.yaml
@@ -8,7 +8,7 @@ sensors:
     value_template: >
       {{ is_state("binary_sensor.activity_in_living_room", "on")
         or is_state("binary_sensor.activity_in_hallway", "on")
-        or is_state("binary_sensor.activity_in_study_room", "on")
+        or is_state("binary_sensor.activity_in_study", "on")
         or is_state("binary_sensor.activity_in_landing", "on") }}
 
   motion_detected_in_last_hour:
@@ -35,8 +35,8 @@ sensors:
       {{ is_state("binary_sensor.hallway_motion_sensor_occupancy", "on") }}
     delay_off: "00:02:00"
 
-  activity_in_study_room:
-    friendly_name: Activity in the study room
+  activity_in_study:
+    friendly_name: Activity in the study
     value_template: >
       {{ is_state("binary_sensor.study_motion_sensor_occupancy", "on") }}
     delay_off: "00:02:00"
