--- a/views/lights.yaml
+++ b/views/lights.yaml
@@ -27,6 +27,9 @@ cards:
 
           - type: markdown
             style: !include snippets/style-markdown-page-title.yaml
+            card_mod:
+              style: |
+                ha-card {background: none;}
             content: >
               # Light
 
@@ -49,13 +52,17 @@ cards:
 
                   - type: 'custom:mushroom-person-card'
                     entity: person.wesley
-                    style: 'ha-card {background: none;}'
                     use_entity_picture: true
+                    card_mod:
+                      style: |
+                        ha-card {background: none;}
 
                   - type: 'custom:mushroom-person-card'
                     entity: person.fenne
-                    style: 'ha-card {background: none;}'
                     use_entity_picture: true
+                    card_mod:
+                      style: |
+                        ha-card {background: none;}
 
       # [Column] Downstairs
 
