--- a/views/summary.yaml
+++ b/views/summary.yaml
@@ -29,6 +29,9 @@ cards:
 
           - type: markdown
             style: !include snippets/style-markdown-page-title.yaml
+            card_mod:
+              style: |
+                ha-card {background: none;}
             content: >
               # {% if now() > today_at('18:00') %}Good evening{% elif
               now() > today_at('12:00') %}Good afternoon{% elif now() >
@@ -48,13 +51,17 @@ cards:
 
                   - type: 'custom:mushroom-person-card'
                     entity: person.wesley
-                    style: 'ha-card {background: none;}'
                     use_entity_picture: true
+                    card_mod:
+                      style: |
+                        ha-card {background: none;}
 
                   - type: 'custom:mushroom-person-card'
                     entity: person.fenne
-                    style: 'ha-card {background: none;}'
                     use_entity_picture: true
+                    card_mod:
+                      style: |
+                        ha-card {background: none;}
 
       # Summary
       # [Column] Left
