--- a/entities/sensors/mobility/car_sensors.yaml
+++ b/entities/sensors/mobility/car_sensors.yaml
@@ -6,29 +6,29 @@ sensors:
   car_days:
     unique_id: car_days
     friendly_name: Car possession in days
-    value_template: '{{ ((now().timestamp() - as_timestamp("2020-11-04")) /86400) | int }}'
+    value_template: '{{ ((now().timestamp() - states.input_datetime.car_start_date.attributes.timestamp) / 86400) | int | round(0) }}'
     unit_of_measurement: 'Days'
 
   car_km_allowed:
     unique_id: car_km_allowed
-    friendly_name: Car KM allowed to date
-    value_template: '{{ (15000 / 365) | round(0) * (states("sensor.car_days")|float) | round(0) }}'
-    unit_of_measurement: 'KM'
+    friendly_name: Car km allowed to date
+    value_template: '{{ (states("input_number.car_monthly_km")|float / 365) | round(0) * states("sensor.car_days")|float | round(0) }}'
+    unit_of_measurement: 'km'
 
   car_km_excess:
     unique_id: car_km_excess
-    friendly_name: Car KM excess
-    value_template: '{{ (states("sensor.car_km_allowed")|float) | round(0) - (states("input_number.car_kilometer_counter")|float) | round(0) }}'
-    unit_of_measurement: 'KM'
+    friendly_name: Car km excess
+    value_template: '{{ (states("sensor.car_km_allowed")|float) | round(0) - (states("sensor.audi_a3_limousine_wv_mileage")|float) | round(0) }}'
+    unit_of_measurement: 'km'
 
   car_km_percentage:
     unique_id: car_km_percentage
-    friendly_name: Car KM percentage
-    value_template: '{{ ((states("input_number.car_kilometer_counter")|float)|round(0) / (states("sensor.car_km_allowed")|float)|round(0) *100)|round(1) }}'
+    friendly_name: Car km percentage
+    value_template: '{{ (((states("input_number.car_kilometer_counter")|float) | round(0) / (states("sensor.car_km_allowed")|float) | round(0)) * 100) | round(1) }}'
     unit_of_measurement: '%'
 
   car_additional_cost:
     unique_id: car_additional_cost
     friendly_name: Car additional cost
-    value_template: '{{ ((states("sensor.car_km_excess")|float) | round(0) * (states("input_number.car_additional_km_price")|float) | round(0)) /100|round(2)|float | abs }}'
+    value_template: '{{ ((states("sensor.car_km_excess")|float) | round(0) * (states("input_number.car_additional_km_price")|float) | round(0)) / 100 | round(2)|float | abs }}'
     unit_of_measurement: '€'
